<resources>
    <string name="app_name">Irriga</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coentro">Coentro</string>
    <string name="cebolinha">Cebolinha</string>
    <string name="couve">Couve</string>
    <string name="alface">Alface</string>
    <string name="inicio">Inicio</string>
    <string name="clima_tempo">Clima/tempo</string>
    <string name="meteorologia">Meteorologia</string>
    <string name="Inicio">inicio</string>
    <string name="Cebolinha">Cebolinha</string>
    <string name="textbox">Há plantinhas necessitando de atenção?</string>
</resources>